# Warehouse-Inventory-System

./: .gitattributes  CMakeLists.txt  DocCMake.md  LICENSE  README.md
data/: barang.json
image/: desktop.ini
include/input/: CariBarang.hpp  HapusBarang.hpp  Input.hpp  TambahBarang.hpp  UpdateBarang.hpp
include/inventory/: Barang.hpp  Gudang.hpp
include/menu/: Menu.hpp  MenuLogic.hpp  MenuView.hpp
include/utils/: Color.hpp  Console.hpp  Mapper.hpp  TextHelper.hpp  Validator.hpp
lib/table/: CppConsoleTable.hpp
src/: main.cpp
src/input/: CariBarang.cpp  HapusBarang.cpp  Input.cpp  TambahBarang.cpp  UpdateBarang.cpp
src/inventory/: Gudang.cpp
src/menu/: Menu.cpp  MenuLogic.cpp  MenuView.cpp
src/utils/: Console.cpp  Mapper.cpp  TextHelper.cpp  Validator.cpp
